@@ -1,11 +1,16 @@
 package fr.cnrs.opentheso.bean.alignment;
 
-import fr.cnrs.opentheso.repositories.AlignmentHelper;
+import fr.cnrs.opentheso.bean.menu.users.CurrentUser;
 import fr.cnrs.opentheso.models.alignment.NodeSelectedAlignment;
 import fr.cnrs.opentheso.bean.menu.theso.SelectedTheso;
 import fr.cnrs.opentheso.bean.rightbody.viewconcept.ConceptView;
 import fr.cnrs.opentheso.models.alignment.AlignementSource;
+import fr.cnrs.opentheso.services.AlignmentService;
+import fr.cnrs.opentheso.services.AlignmentSourceService;
+import fr.cnrs.opentheso.utils.MessageUtils;
 
+import jakarta.faces.application.FacesMessage;
+import jakarta.faces.context.FacesContext;
 import jakarta.inject.Named;
 import jakarta.enterprise.context.SessionScoped;
 import java.io.Serializable;
@@ -14,42 +19,37 @@ import java.net.URL;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-import jakarta.faces.application.FacesMessage;
-import jakarta.faces.context.FacesContext;
-import lombok.Data;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.primefaces.PrimeFaces;
-import org.springframework.context.annotation.Lazy;
+
+import static java.net.HttpURLConnection.HTTP_OK;
+
 
 @Slf4j
-
-@Data
+@Setter
+@Getter
 @SessionScoped
+@RequiredArgsConstructor
 @Named(value = "setAlignmentSourceBean")
 public class SetAlignmentSourceBean implements Serializable {
 
-    @Autowired
-    private ConceptView conceptView;
+    private final ConceptView conceptView;
+    private final SelectedTheso selectedTheso;
+    private final AlignmentBean alignmentBean;
+    private final AlignmentService alignmentService;
+    private final AlignmentSourceService alignmentSourceService;
+    private final CurrentUser currentUser;
 
-    @Autowired
-    private SelectedTheso selectedTheso;
-
-    @Autowired @Lazy
-    private AlignmentBean alignmentBean;
-    
-    @Autowired
-    private AlignmentHelper alignmentHelper;
-
-    private List<AlignementSource> allAlignementSources;
-    private List<NodeSelectedAlignment> selectedAlignments = new ArrayList<>();
-    private List<NodeSelectedAlignment> selectedAlignmentsOfTheso, nodeSelectedAlignmentsAll, sourcesSelected;
-    private NodeSelectedAlignment selectedSource;
-    private String sourceName, sourceUri, sourceIdTheso, description, sourceSelectedName;
+    private String sourceName, sourceUri, sourceIdThesaurus, description, sourceSelectedName;
     private AlignementSource selectedAlignementSource, alignementSourceToUpdate;
+    private List<AlignementSource> allAlignementSources;
+    private NodeSelectedAlignment selectedSource;
+    private List<NodeSelectedAlignment> selectedAlignments, selectedAlignmentsOfThesaurus, nodeSelectedAlignmentsAll, sourcesSelected;
     
 
     public void init() {
@@ -57,6 +57,7 @@ public class SetAlignmentSourceBean implements Serializable {
         alignmentBean.setViewSetting(true);
         alignmentBean.setViewAddNewSource(false);
         alignementSourceToUpdate = null;
+        selectedAlignments = new ArrayList<>();
     }
     
     public void initForManage(){
@@ -65,19 +66,16 @@ public class SetAlignmentSourceBean implements Serializable {
     }
     
     public void initForUpdate(NodeSelectedAlignment nodeSelectedAlignment){
-        alignementSourceToUpdate= alignmentHelper.getThisAlignementSource(nodeSelectedAlignment.getIdAlignmentSource());
+        alignementSourceToUpdate= alignmentSourceService.getAlignementSourceById(nodeSelectedAlignment.getIdAlignmentSource());
     }
 
     public void initAlignementAutomatique(String alignementMode) {
 
         initSourcesList();
 
-        sourcesSelected = nodeSelectedAlignmentsAll.stream()
-                .filter(source -> source.isSelected())
-                .collect(Collectors.toList());
-
+        sourcesSelected = nodeSelectedAlignmentsAll.stream().filter(NodeSelectedAlignment::isSelected).toList();
         if (CollectionUtils.isEmpty(sourcesSelected)) {
-            showMessage(FacesMessage.SEVERITY_WARN, "Veuillez sélectionner une source !");
+            MessageUtils.showWarnMessage("Veuillez sélectionner une source !");
             return;
         }
 
@@ -91,7 +89,7 @@ public class SetAlignmentSourceBean implements Serializable {
                 sourceSelectedName = sourceFound.get().getSource();
                 alignmentBean.searchAlignementsForAllConcepts(sourceFound.get());
             } else {
-                showMessage(FacesMessage.SEVERITY_WARN, "Veuillez sélectionner une source !");
+                MessageUtils.showWarnMessage("Veuillez sélectionner une source !");
             }
             return;
         }
@@ -103,44 +101,39 @@ public class SetAlignmentSourceBean implements Serializable {
     public void updateSelectedSource(NodeSelectedAlignment selectedAlignment) throws SQLException {
 
         if (selectedAlignment.isSelected()) {
-            alignmentHelper.addSourceAlignementToTheso(
-                    selectedTheso.getCurrentIdTheso(), selectedAlignment.getIdAlignmentSource());
+            alignmentSourceService.addSourceAlignementToThesaurus(selectedTheso.getCurrentIdTheso(), selectedAlignment.getIdAlignmentSource());
         } else {
-            alignmentHelper.deleteSourceAlignementFromTheso(selectedTheso.getCurrentIdTheso(), selectedAlignment.getIdAlignmentSource());
+            alignmentSourceService.deleteAlignmentSource(selectedAlignment.getIdAlignmentSource());
         }
-        showMessage(FacesMessage.SEVERITY_INFO, "Source mise à jour !");
+        MessageUtils.showInformationMessage("Source mise à jour !");
     }
 
     public void startAlignementAutomatique() {
         if (!ObjectUtils.isEmpty(selectedSource)) {
-            alignmentBean.setAlignementSources(alignmentHelper.getAlignementSource(selectedTheso.getCurrentIdTheso()));
+            alignmentBean.setAlignementSources(alignmentSourceService.getAlignementSources(selectedTheso.getCurrentIdTheso()));
             var sourceFound = alignmentBean.getAlignementSources().stream()
                     .filter(source -> source.getId() == selectedSource.getIdAlignmentSource())
                     .findFirst();
-            sourceSelectedName = sourceFound.get().getSource();
-            alignmentBean.initAlignmentType();
-            alignmentBean.searchAlignementsForAllConcepts(sourceFound.get());
-            selectedSource = null;
-            PrimeFaces.current().executeScript("PF('selectSourceManagement').hide();");
+            if (sourceFound.isPresent()) {
+                sourceSelectedName = sourceFound.get().getSource();
+                alignmentBean.initAlignmentType();
+                alignmentBean.searchAlignementsForAllConcepts(sourceFound.get());
+                selectedSource = null;
+                PrimeFaces.current().executeScript("PF('selectSourceManagement').hide();");
+            }
         } else {
-            showMessage(FacesMessage.SEVERITY_WARN, "Veuillez sélectionner une source !");
+            MessageUtils.showWarnMessage("Veuillez sélectionner une source !");
         }
-    }
-
-    private void showMessage(FacesMessage.Severity severity, String message) {
-        FacesMessage msg = new FacesMessage(severity, "", message);
-        FacesContext.getCurrentInstance().addMessage(null, msg);
-        PrimeFaces.current().ajax().update("messageIndex");
     }
 
     public void initSourcesList() {
 
         // toutes les sources d'alignements
-        allAlignementSources = alignmentHelper.getAlignementSourceSAdmin();
+        allAlignementSources = alignmentSourceService.getAllAlignementSources();
         nodeSelectedAlignmentsAll = new ArrayList<>();
 
-        // la liste des sources séléctionnées pour le thésaurus en cours
-        selectedAlignmentsOfTheso = alignmentHelper.getSelectedAlignementOfThisTheso(selectedTheso.getCurrentIdTheso());
+        // la liste des sources sélectionnées pour le thésaurus en cours
+        selectedAlignmentsOfThesaurus = alignmentService.getSelectedAlignementOfThisThesaurus(selectedTheso.getCurrentIdTheso());
 
         // intégrer les éléments dans un vecteur global pour la modifiation
         for (AlignementSource allAlignementSource : allAlignementSources) {
@@ -152,7 +145,7 @@ public class SetAlignmentSourceBean implements Serializable {
             nodeSelectedAlignmentsAll.add(nodeSelectedAlignment);
         }
 
-        for (NodeSelectedAlignment selectedAlignmentOfTheso : selectedAlignmentsOfTheso) {
+        for (NodeSelectedAlignment selectedAlignmentOfTheso : selectedAlignmentsOfThesaurus) {
             for (NodeSelectedAlignment nodeSelectedAlignment : nodeSelectedAlignmentsAll) {
                 if (nodeSelectedAlignment.getIdAlignmentSource() == selectedAlignmentOfTheso.getIdAlignmentSource()) {
                     nodeSelectedAlignment.setSelected(true);
@@ -165,7 +158,7 @@ public class SetAlignmentSourceBean implements Serializable {
 
         sourceName = null;
         sourceUri = null;
-        sourceIdTheso = null;
+        sourceIdThesaurus = null;
         description = null;
 
         alignmentBean.setViewAddNewSource(true);
@@ -184,12 +177,12 @@ public class SetAlignmentSourceBean implements Serializable {
             return;
         }
 
-        if (!alignmentHelper.deleteAlignmentSource(alignment.getIdAlignmentSource())) {
-            showMessage(FacesMessage.SEVERITY_ERROR,"Erreur pendant la suppression de la source !");
+        if (!alignmentSourceService.deleteAlignmentSource(alignment.getIdAlignmentSource())) {
+            MessageUtils.showErrorMessage("Erreur pendant la suppression de la source !");
             return;
         }
 
-        showMessage(FacesMessage.SEVERITY_ERROR,"Suppression réussie");
+        MessageUtils.showWarnMessage("Suppression réussie");
         initForManage();
     }              
             
@@ -199,31 +192,30 @@ public class SetAlignmentSourceBean implements Serializable {
             return;
         }
 
-        if (!alignmentHelper.updateAlignmentSource(alignementSourceToUpdate)) {
-            showMessage(FacesMessage.SEVERITY_ERROR,"Erreur pendant la mise à jour de la source !");
+        if (!alignmentSourceService.updateAlignmentSource(alignementSourceToUpdate)) {
+            MessageUtils.showWarnMessage("Erreur pendant la mise à jour de la source !");
             return;
         }
 
-        showMessage(FacesMessage.SEVERITY_INFO,"Source mise à jour avec succès");
-
+        MessageUtils.showInformationMessage("Source mise à jour avec succès");
         initForManage();
     }    
     
     /**
      * permet d'ajouter une source d'alignement et affecter cette source au thésaurus en cours.
      */
-    public void addAlignmentSource(int idUser) {
+    public void addAlignmentSource() throws Exception {
 
         if (sourceName == null || sourceName.isEmpty()) {
-            showMessage(FacesMessage.SEVERITY_ERROR,"Le nom de la source est obligatoire !");
+            MessageUtils.showWarnMessage("Le nom de la source est obligatoire !");
             return;
         }
         if (sourceUri == null || sourceUri.isEmpty()) {
-            showMessage(FacesMessage.SEVERITY_ERROR,"L'URL est obligatoire !");
+            MessageUtils.showWarnMessage("L'URL est obligatoire !");
             return;
         }
-        if (sourceIdTheso == null || sourceIdTheso.isEmpty()) {
-            showMessage(FacesMessage.SEVERITY_ERROR, "L'Id. du thésaurus est obligatoire !");
+        if (sourceIdThesaurus == null || sourceIdThesaurus.isEmpty()) {
+            MessageUtils.showWarnMessage( "L'Id. du thésaurus est obligatoire !");
             return;
         }
 
@@ -233,43 +225,35 @@ public class SetAlignmentSourceBean implements Serializable {
 
 
         if(!testNewSourceAlignment(sourceUri)) {
-            showMessage(FacesMessage.SEVERITY_ERROR,"Uri du serveur non valide !");
+            MessageUtils.showWarnMessage("Uri du serveur non valide !");
             return;
         }
         
-        AlignementSource alignementSource = new AlignementSource();
+        var alignementSource = new AlignementSource();
         alignementSource.setAlignement_format("skos");
         alignementSource.setDescription(description);
-        alignementSource.setRequete(sourceUri + "/api/search?q=##value##&lang=##lang##&theso=" + sourceIdTheso);
+        alignementSource.setRequete(sourceUri + "/api/search?q=##value##&lang=##lang##&theso=" + sourceIdThesaurus);
         alignementSource.setSource(sourceName);
         alignementSource.setTypeRequete("REST");
-
-        if (!alignmentHelper.addNewAlignmentSource(alignementSource, idUser, selectedTheso.getCurrentIdTheso())) {
-            showMessage(FacesMessage.SEVERITY_ERROR,"Erreur côté base de données !");
+        if (!alignmentSourceService.addNewAlignmentSource(alignementSource, selectedTheso.getCurrentIdTheso(),
+                currentUser.getNodeUser().getIdUser())) {
+            MessageUtils.showWarnMessage("Erreur côté base de données !");
             return;
         }
 
-        showMessage(FacesMessage.SEVERITY_INFO,"Source ajoutée avec succès !");
+        MessageUtils.showInformationMessage("Source ajoutée avec succès !");
 
         initForManage();
         alignmentBean.setViewAddNewSource(false);
         alignmentBean.setViewSetting(false);
     }
     
-    private boolean testNewSourceAlignment(String uri){
-        uri = uri + "/api/ping";
-        try {
-            URL url = new URL(uri);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            int responseCode = connection.getResponseCode();
-            if (responseCode == HttpURLConnection.HTTP_OK) {  
-                return true;
-            }      
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return false;
+    private boolean testNewSourceAlignment(String uri) throws Exception {
+
+        var url = new URL(uri + "/api/ping");
+        var connection = (HttpURLConnection) url.openConnection();
+        connection.setRequestMethod("GET");
+        return HTTP_OK == connection.getResponseCode();
     }
 
     public void cancel() {
@@ -280,7 +264,7 @@ public class SetAlignmentSourceBean implements Serializable {
     public void clearValues() {
         sourceName = "";
         sourceUri = "";
-        sourceIdTheso = "";
+        sourceIdThesaurus = "";
         description = "";
     }
 }
