@@ -1,199 +1,112 @@
 package fr.cnrs.opentheso.bean.candidat;
 
-import fr.cnrs.opentheso.repositories.GroupHelper;
-import fr.cnrs.opentheso.repositories.TermHelper;
-import fr.cnrs.opentheso.models.concept.Concept;
+import fr.cnrs.opentheso.entites.ConceptDcTerm;
+import fr.cnrs.opentheso.entites.HierarchicalRelationship;
+import fr.cnrs.opentheso.models.alignment.AlignementElement;
 import fr.cnrs.opentheso.models.concept.DCMIResource;
-import fr.cnrs.opentheso.models.nodes.DcElement;
 import fr.cnrs.opentheso.models.terms.Term;
-import fr.cnrs.opentheso.repositories.AlignmentHelper;
-import fr.cnrs.opentheso.repositories.CandidateHelper;
-import fr.cnrs.opentheso.repositories.ConceptHelper;
-import fr.cnrs.opentheso.repositories.DcElementHelper;
-import fr.cnrs.opentheso.repositories.ImagesHelper;
-import fr.cnrs.opentheso.repositories.NoteHelper;
-import fr.cnrs.opentheso.repositories.RelationsHelper;
-import fr.cnrs.opentheso.repositories.SearchHelper;
-import fr.cnrs.opentheso.repositories.ThesaurusHelper;
-import fr.cnrs.opentheso.repositories.UserHelper;
 import fr.cnrs.opentheso.models.alignment.NodeAlignment;
 import fr.cnrs.opentheso.models.nodes.NodeIdValue;
 import fr.cnrs.opentheso.models.thesaurus.NodeLangTheso;
 import fr.cnrs.opentheso.models.notes.NodeNote;
 import fr.cnrs.opentheso.bean.alignment.AlignmentBean;
 import fr.cnrs.opentheso.bean.alignment.AlignmentManualBean;
-import fr.cnrs.opentheso.repositories.candidats.CandidatDao;
-import fr.cnrs.opentheso.repositories.candidats.DomaineDao;
-import fr.cnrs.opentheso.repositories.candidats.NoteDao;
-import fr.cnrs.opentheso.repositories.candidats.RelationDao;
-import fr.cnrs.opentheso.repositories.candidats.TermeDao;
+import fr.cnrs.opentheso.repositories.ConceptDcTermRepository;
 import fr.cnrs.opentheso.models.candidats.CandidatDto;
 import fr.cnrs.opentheso.models.candidats.DomaineDto;
 import fr.cnrs.opentheso.models.candidats.enumeration.VoteType;
-import fr.cnrs.opentheso.bean.concept.ImageBean;
 import fr.cnrs.opentheso.bean.language.LanguageBean;
-
-import fr.cnrs.opentheso.bean.menu.theso.RoleOnThesoBean;
+import fr.cnrs.opentheso.bean.menu.theso.RoleOnThesaurusBean;
 import fr.cnrs.opentheso.bean.menu.theso.SelectedTheso;
 import fr.cnrs.opentheso.bean.menu.users.CurrentUser;
-import fr.cnrs.opentheso.bean.rightbody.viewconcept.ConceptView;
-import fr.cnrs.opentheso.services.candidats.CandidatService;
-
-import java.io.Serializable;
-import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import jakarta.enterprise.context.SessionScoped;
-import jakarta.faces.application.FacesMessage;
-import jakarta.faces.context.FacesContext;
-import org.primefaces.event.TabChangeEvent;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.context.annotation.Lazy;
-import jakarta.inject.Named;
+import fr.cnrs.opentheso.services.AlignmentService;
+import fr.cnrs.opentheso.services.ConceptService;
+import fr.cnrs.opentheso.services.GroupService;
+import fr.cnrs.opentheso.services.CandidatService;
+import fr.cnrs.opentheso.services.NonPreferredTermService;
+import fr.cnrs.opentheso.services.NoteService;
+import fr.cnrs.opentheso.services.RelationService;
+import fr.cnrs.opentheso.services.SearchService;
+import fr.cnrs.opentheso.services.TermService;
+import fr.cnrs.opentheso.services.ThesaurusService;
+import fr.cnrs.opentheso.services.UserService;
+import fr.cnrs.opentheso.utils.MessageUtils;
 
 import java.io.IOException;
+import java.io.Serializable;
+import java.sql.SQLException;
+import java.text.SimpleDateFormat;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Date;
+import java.util.List;
 import java.util.Arrays;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import jakarta.annotation.PreDestroy;
+
+import jakarta.inject.Named;
+import jakarta.faces.context.FacesContext;
 import jakarta.faces.context.ExternalContext;
 import jakarta.servlet.http.HttpServletRequest;
-
 import lombok.Data;
-import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+import lombok.Setter;
+import lombok.extern.slf4j.Slf4j;
 import org.primefaces.PrimeFaces;
 import org.primefaces.event.SelectEvent;
+import org.primefaces.event.TabChangeEvent;
+import org.springframework.beans.factory.annotation.Value;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
+import jakarta.enterprise.context.SessionScoped;
 
 
-@Data
+@Slf4j
+@Getter
+@Setter
 @SessionScoped
+@RequiredArgsConstructor
 @Named(value = "candidatBean")
 public class CandidatBean implements Serializable {
 
     @Value("${settings.workLanguage:fr}")
     private String workLanguage;
 
-    @Autowired @Lazy
-    private SelectedTheso selectedTheso;
+    private final SelectedTheso selectedTheso;
+    private final CurrentUser currentUser;
+    private final LanguageBean languageBean;
+    private final AlignmentBean alignmentBean;
+    private final AlignmentManualBean alignmentManualBean;
+    private final RoleOnThesaurusBean roleOnThesoBean;
 
-    @Autowired
-    private NoteDao noteDao;
+    private final UserService userService;
+    private final NoteService noteService;
+    private final TermService termService;
+    private final GroupService groupService;
+    private final SearchService searchService;
+    private final ConceptService conceptService;
+    private final RelationService relationService;
+    private final CandidatService candidatService;
+    private final AlignmentService alignmentService;
+    private final ThesaurusService thesaurusService;
+    private final NonPreferredTermService nonPreferredTermService;
+    private final ConceptDcTermRepository conceptDcTermRepository;
 
-    @Autowired @Lazy
-    private RoleOnThesoBean roleOnThesoBean;
-
-    @Autowired @Lazy
-    private CurrentUser currentUser;
-
-    @Autowired @Lazy
-    private LanguageBean languageBean;
-
-    @Autowired @Lazy
-    private ConceptView conceptView;
-
-    @Autowired @Lazy
-    private ImageBean imageBean;
-
-    @Autowired @Lazy
-    private AlignmentBean alignmentBean;
-
-    @Autowired @Lazy
-    private AlignmentManualBean alignmentManualBean;
-
-    @Autowired
-    private NoteHelper noteHelper;
-
-    @Autowired
-    private RelationsHelper relationsHelper;
-
-    @Autowired
-    private RelationDao relationDao;
-
-    @Autowired
-    private SearchHelper searchHelper;
-
-    @Autowired
-    private DcElementHelper dcElementHelper;
-
-    @Autowired
-    private CandidateHelper candidateHelper;
-
-    @Autowired
-    private ImagesHelper imagesHelper;
-
-    @Autowired
-    private DomaineDao domaineDao;
-
-    @Autowired
-    private TermHelper termHelper;
-
-    @Autowired
-    private GroupHelper groupHelper;
-
-    @Autowired
-    private ConceptHelper conceptHelper;
-
-    @Autowired
-    private CandidatService candidatService;
-
-    @Autowired
-    private AlignmentHelper alignmentHelper;
-
-    @Autowired
-    private UserHelper userHelper;
-
-    @Autowired
-    private TermeDao termeDao;
-
-    @Autowired
-    private ThesaurusHelper thesaurusHelper;
-
-    private boolean isListCandidatsActivate, isNewCandidatActivate, isShowCandidatActivate;
-    private boolean isRejectCandidatsActivate, isAcceptedCandidatsActivate, isExportViewActivate, isImportViewActivate;
-    private boolean myCandidatsSelected1, myCandidatsSelected2, myCandidatsSelected3;
-
+    private boolean isListCandidatsActivate, isNewCandidatActivate, isShowCandidatActivate, isRejectCandidatsActivate,
+            isAcceptedCandidatsActivate, isExportViewActivate, isImportViewActivate, myCandidatsSelected1, myCandidatsSelected2,
+            myCandidatsSelected3, listSelected, traductionVisible, modifiedLabel;
     private int tabViewIndexSelected, progressBarStep, progressBarValue;
-
     private NodeAlignment alignementSelected;
-
-    private String employePour;
-    private String message, definition, selectedExportFormat;
-    private String searchValue1, searchValue2, searchValue3;
-
+    private String employePour, message, definition, selectedExportFormat, searchValue1, searchValue2, searchValue3;
     private CandidatDto candidatSelected, initialCandidat;
     private List<String> exportFormat;
-    private List<CandidatDto> candidatList, rejetCadidat, acceptedCadidat, allTermes;
+    private List<CandidatDto> selectedCandidates, candidatList, rejetCadidat, acceptedCadidat, allTermes;
     private List<DomaineDto> domaines;
-    private List<NodeLangTheso> selectedLanguages;
+    private List<NodeLangTheso> selectedLanguages, languagesOfTheso;
     private List<NodeIdValue> allCollections, allTermesGenerique, AllTermesAssocies;
-    private ArrayList<NodeLangTheso> languagesOfTheso;
-    private List<CandidatDto> selectedCandidates;
-    private boolean listSelected;
-    private boolean traductionVisible;
-    private boolean isModifiedLabel;
+    private NodeIdValue collectionSelected, traductionSelected, termesAssociesSelected;
 
-    private List<NodeIdValue> collectionTemps, termesGeneriqueTmp, termesAssociesTmp;
-
-    public void clear() {
-        candidatSelected = null;
-        initialCandidat = null;
-        exportFormat = null;
-        candidatList = null;
-        rejetCadidat = null;
-        acceptedCadidat = null;
-        allTermes = null;
-        domaines = null;
-        selectedLanguages = null;
-        languagesOfTheso = null;
-        definition = null;
-        isModifiedLabel = false;
-    }
 
     public void setStateForSelectedCandidate() {
         if (selectedCandidates != null) {
@@ -210,11 +123,7 @@ public class CandidatBean implements Serializable {
         isImportViewActivate = false;
         isExportViewActivate = false;
         listSelected = false;
-        isModifiedLabel = false;
-
-        collectionTemps = new ArrayList<>();
-        termesGeneriqueTmp = new ArrayList<>();
-        termesAssociesTmp = new ArrayList<>();
+        modifiedLabel = false;
 
         candidatList = new ArrayList<>();
         allTermes = new ArrayList<>();
@@ -224,18 +133,15 @@ public class CandidatBean implements Serializable {
         acceptedCadidat = new ArrayList<>();
         selectedCandidates = new ArrayList<>();
 
-        getAllCandidatsByThesoAndLangue();
-        //getRejectCandidatByThesoAndLangue();
-        //getAcceptedCandidatByThesoAndLangue();
+        loadCandidatsList();
         tabViewIndexSelected = 0;
-
         alignementSelected = new NodeAlignment();
 
         exportFormat = Arrays.asList("skos", "json", "jsonLd", "turtle");
         selectedExportFormat = "skos";
 
         try {
-            languagesOfTheso = thesaurusHelper.getAllUsedLanguagesOfThesaurusNode(selectedTheso.getCurrentIdTheso(), selectedTheso.getCurrentLang());
+            languagesOfTheso = thesaurusService.getAllUsedLanguagesOfThesaurusNode(selectedTheso.getCurrentIdTheso(), selectedTheso.getCurrentLang());
             languagesOfTheso.forEach((nodeLang) -> {
                 selectedLanguages.add(nodeLang);
             });
@@ -243,21 +149,8 @@ public class CandidatBean implements Serializable {
         }
     }
 
-    public void onTabChange(TabChangeEvent event) {
-        switch(event.getTab().getTitle()) {
-            case "Concepts insérés":
-                getAcceptedCandidatByThesoAndLangue();
-                break;
-            case "Concepts rejetés":
-                getRejectCandidatByThesoAndLangue();
-                break;
-            default:
-                getAllCandidatsByThesoAndLangue();
-        }
-    }
-
     public void getAllCandidatsByThesoAndLangue() {
-        isModifiedLabel = false;
+        modifiedLabel = false;
         tabViewIndexSelected = 0;
         if (!StringUtils.isEmpty(selectedTheso.getSelectedIdTheso())) {
             candidatList = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 1);
@@ -268,11 +161,7 @@ public class CandidatBean implements Serializable {
 
     public void getRejectCandidatByThesoAndLangue() {
         tabViewIndexSelected = 2;
-        if (!StringUtils.isEmpty(selectedTheso.getSelectedIdTheso())) {
-            rejetCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 3);
-        } else {
-            rejetCadidat.clear();
-        }
+        rejetCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 3);
     }
 
     public void getAcceptedCandidatByThesoAndLangue() {
@@ -280,7 +169,7 @@ public class CandidatBean implements Serializable {
         if (!StringUtils.isEmpty(selectedTheso.getSelectedIdTheso())) {
             acceptedCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 2);
         } else {
-            acceptedCadidat.clear();
+            acceptedCadidat = Collections.emptyList();
         }
         isAcceptedCandidatsActivate = true;
     }
@@ -296,15 +185,14 @@ public class CandidatBean implements Serializable {
         }
 
         for (CandidatDto selectedCandidate : selectedCandidates) {
-            if (!conceptHelper.deleteConcept(selectedCandidate.getIdConcepte(),
-                    selectedCandidate.getIdThesaurus(), idUser)) {
-                showMessage(FacesMessage.SEVERITY_ERROR, "Erreur de suppression");
+            if (!conceptService.deleteConcept(selectedCandidate.getIdConcepte(), selectedCandidate.getIdThesaurus())) {
+                MessageUtils.showErrorMessage("Erreur de suppression");
                 return;
             }
         }
         initCandidatModule();
-        getAllCandidatsByThesoAndLangue();
-        showMessage(FacesMessage.SEVERITY_INFO, "Candidats supprimés");
+        loadCandidatsList();
+        MessageUtils.showInformationMessage("Candidats supprimés");
     }
 
     /**
@@ -314,14 +202,14 @@ public class CandidatBean implements Serializable {
         if (candidatSelected == null) {
             return;
         }
-        if (!conceptHelper.deleteConcept(candidatSelected.getIdConcepte(),
-                candidatSelected.getIdThesaurus(), idUser)) {
-            showMessage(FacesMessage.SEVERITY_ERROR, "Erreur de suppression");
+        if (!conceptService.deleteConcept(candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus())) {
+            MessageUtils.showErrorMessage("Erreur de suppression");
             return;
         }
+
         initCandidatModule();
-        getAllCandidatsByThesoAndLangue();
-        showMessage(FacesMessage.SEVERITY_INFO, "Candidat supprimé");
+        loadCandidatsList();
+        MessageUtils.showInformationMessage("Candidat supprimé");
     }
 
     /**
@@ -333,132 +221,151 @@ public class CandidatBean implements Serializable {
         return candidatSelected.getCreatedById() == candidatSelected.getUserId();
     }
 
-    /**
-     * permet de déctercter la langue préférée d'un thésaurus
-     *
-     * @return
-     */
     private String getIdLang() {
-        String idLang = workLanguage;
+
+        log.debug("Récupération de la langue préféré d'un thésaurus");
         if (roleOnThesoBean.getNodePreference() != null) {
-            idLang = roleOnThesoBean.getNodePreference().getSourceLang();
+            return roleOnThesoBean.getNodePreference().getSourceLang();
         }
-        return idLang;
+        return workLanguage;
     }
 
     public void selectMyCandidats() {
+        tabViewIndexSelected = 0;
         if (myCandidatsSelected1) {
             candidatList = candidatList.stream()
                     .filter(candidat -> candidat.getCreatedById() == currentUser.getNodeUser().getIdUser())
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
-            getAllCandidatsByThesoAndLangue();
+            candidatList = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 1);
         }
-        showMessage(FacesMessage.SEVERITY_INFO, new StringBuffer().append(candidatList.size()).append(" ")
+        MessageUtils.showInformationMessage(new StringBuffer().append(candidatList.size()).append(" ")
                 .append(languageBean.getMsg("candidat.result_found")).toString());
     }
 
+    public void onTabChange(TabChangeEvent event) {
+
+        searchValue1 = "";
+        listSelected = false;
+        selectedCandidates = List.of();
+        myCandidatsSelected1 = false;
+        candidatList = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 1);
+
+        searchValue2 = "";
+        myCandidatsSelected2 = false;
+        acceptedCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 2);
+
+        searchValue3 = "";
+        myCandidatsSelected3 = false;
+        rejetCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 3);
+
+        switch(event.getTab().getTitle()) {
+            case "Concepts rejetés" -> tabViewIndexSelected = 2;
+            case "Concepts insérés" -> tabViewIndexSelected = 1;
+            default -> tabViewIndexSelected = 0;
+        }
+    }
+
+    private void loadCandidatsList() {
+        getAllCandidatsByThesoAndLangue();
+        getAcceptedCandidatByThesoAndLangue();
+        getRejectCandidatByThesoAndLangue();
+    }
+
     public String getCountOfCandidats() {
-        return "" + candidatList.size();
+        return CollectionUtils.isEmpty(candidatList) ? "0" : String.valueOf(candidatList.size());
     }
 
     public String getCountOfAcceptedCandidats() {
-        return "" + acceptedCadidat.size();
+        return CollectionUtils.isEmpty(acceptedCadidat) ? "0" : String.valueOf(acceptedCadidat.size());
     }
 
     public String getCountOfRejectedCandidats() {
-        return "" + rejetCadidat.size();
+        return CollectionUtils.isEmpty(rejetCadidat) ? "0" : String.valueOf(rejetCadidat.size());
     }
 
     public void selectMyRejectCandidats() {
+        tabViewIndexSelected = 2;
         if (myCandidatsSelected3) {
             rejetCadidat = rejetCadidat.stream()
-                    .filter(candidat -> candidat.getUserId() == currentUser.getNodeUser().getIdUser())
-                    .collect(Collectors.toList());
+                    .filter(candidat -> candidat.getCreatedById() == currentUser.getNodeUser().getIdUser())
+                    .toList();
         } else {
-            getRejectCandidatByThesoAndLangue();
+            rejetCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 3);
         }
-        showMessage(FacesMessage.SEVERITY_INFO, new StringBuffer().append(rejetCadidat.size()).append(" ")
+        MessageUtils.showInformationMessage(new StringBuffer().append(rejetCadidat.size()).append(" ")
                 .append(languageBean.getMsg("candidat.result_found")).toString());
     }
 
     public void searchRejectCandByTermeAndAuteur() {
+
+        rejetCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 3);
         if (!StringUtils.isEmpty(searchValue3)) {
-            rejetCadidat = rejetCadidat.stream()
-                    .filter(candidat -> checkCandidat(candidat))
-                    .collect(Collectors.toList());
-        } else {
-            getRejectCandidatByThesoAndLangue();
+            rejetCadidat = rejetCadidat.stream().filter(candidat -> candidatCheck(candidat, searchValue3))
+                    .toList();
         }
-        showMessage(FacesMessage.SEVERITY_INFO, new StringBuffer().append(rejetCadidat.size()).append(" ")
+        tabViewIndexSelected = 2;
+        MessageUtils.showInformationMessage(new StringBuffer().append(rejetCadidat.size()).append(" ")
                 .append(languageBean.getMsg("candidat.result_found")).toString());
     }
 
-    private boolean checkCandidat(CandidatDto candidat) {
-        return (StringUtils.isNotEmpty(candidat.getNomPref()) && candidat.getNomPref().contains(searchValue3))
-                || (StringUtils.isNotEmpty(candidat.getUser()) && candidat.getUser().contains(searchValue3));
-    }
-
     public void selectMyAcceptedCandidats() {
+        tabViewIndexSelected = 1;
         if (myCandidatsSelected2) {
             acceptedCadidat = acceptedCadidat.stream()
-                    .filter(candidat -> candidat.getUserId() == currentUser.getNodeUser().getIdUser())
-                    .collect(Collectors.toList());
+                    .filter(candidat -> candidat.getCreatedById() == currentUser.getNodeUser().getIdUser())
+                    .toList();
         } else {
-            getAcceptedCandidatByThesoAndLangue();
+            acceptedCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 2);
         }
-        showMessage(FacesMessage.SEVERITY_INFO, new StringBuffer().append(acceptedCadidat.size()).append(" ")
+
+        MessageUtils.showInformationMessage(new StringBuffer().append(acceptedCadidat.size()).append(" ")
                 .append(languageBean.getMsg("candidat.result_found")).toString());
     }
 
     public void searchAcceptedCandByTermeAndAuteur() {
+        acceptedCadidat = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 2);
         if (!StringUtils.isEmpty(searchValue2)) {
             acceptedCadidat = acceptedCadidat.stream()
-                    .filter(candidat -> candidatCheck(candidat))
-                    .collect(Collectors.toList());
-        } else {
-            getAcceptedCandidatByThesoAndLangue();
+                    .filter(candidat -> candidatCheck(candidat, searchValue2))
+                    .toList();
         }
-        showMessage(FacesMessage.SEVERITY_INFO, new StringBuffer().append(acceptedCadidat.size()).append(" ")
+
+        tabViewIndexSelected = 1;
+        MessageUtils.showInformationMessage(new StringBuffer().append(acceptedCadidat.size()).append(" ")
                 .append(languageBean.getMsg("candidat.result_found")).toString());
     }
 
-    private boolean candidatCheck(CandidatDto candidat) {
-        return (StringUtils.isNotEmpty(candidat.getNomPref()) && candidat.getNomPref().contains(searchValue2))
-                || (StringUtils.isNotEmpty(candidat.getUser()) && candidat.getUser().contains(searchValue2));
+    private boolean candidatCheck(CandidatDto candidat, String searchValue) {
+        return (StringUtils.isNotEmpty(candidat.getNomPref()) && candidat.getNomPref().contains(searchValue))
+                || (StringUtils.isNotEmpty(candidat.getUser()) && candidat.getUser().contains(searchValue));
     }
 
     public void searchByTermeAndAuteur() {
+
+        candidatList = candidatService.getCandidatsByStatus(selectedTheso.getSelectedIdTheso(), getIdLang(), 1);
         if (!StringUtils.isEmpty(searchValue1)) {
-            candidatList = candidatService.searchCandidats(searchValue1,
-                    selectedTheso.getCurrentIdTheso(),
-                    selectedTheso.getCurrentLang(),
-                    1, "CA");
-        } else {
-            getAllCandidatsByThesoAndLangue();
+            if (CollectionUtils.isNotEmpty(candidatList)) {
+                candidatList = candidatList.stream()
+                        .filter(candidat -> candidatCheck(candidat, searchValue1))
+                        .toList();
+            }
         }
-        showMessage(FacesMessage.SEVERITY_INFO, new StringBuffer().append(candidatList.size()).append(" ")
+        tabViewIndexSelected = 0;
+        MessageUtils.showInformationMessage(new StringBuffer().append(candidatList.size()).append(" ")
                 .append(languageBean.getMsg("candidat.result_found")).toString());
     }
 
     public void deleteAlignment(NodeAlignment nodeAlignment) {
 
-        if (!alignmentHelper.deleteAlignment(
-                nodeAlignment.getId_alignement(),
-                selectedTheso.getCurrentIdTheso())) {
-
-            FacesMessage msg = new FacesMessage(FacesMessage.SEVERITY_ERROR, "Erreur !", " Erreur de suppression !");
-            FacesContext.getCurrentInstance().addMessage(null, msg);
+        if (!alignmentService.deleteAlignment(nodeAlignment.getId_alignement(), selectedTheso.getCurrentIdTheso())) {
+            MessageUtils.showErrorMessage("Erreur de suppression !");
             return;
         }
 
-        candidatSelected.setAlignments(alignmentHelper.getAllAlignmentOfConcept(
-                candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso()));
+        candidatSelected.setAlignments(alignmentService.getAllAlignmentOfConcept(candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso()));
 
-        FacesMessage msg = new FacesMessage(FacesMessage.SEVERITY_INFO, "info", "Alignement supprimé avec succès");
-        FacesContext.getCurrentInstance().addMessage(null, msg);
-
-        PrimeFaces.current().ajax().update("messageIndex");
+        MessageUtils.showInformationMessage("Alignement supprimé avec succès");
         PrimeFaces.current().ajax().update("tabViewCandidat");
     }
 
@@ -467,7 +374,7 @@ public class CandidatBean implements Serializable {
         tabViewIndexSelected = 2;
 
         if (StringUtils.isEmpty(selectedTheso.getCurrentIdTheso())) {
-            showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.msg9"));
+            MessageUtils.showWarnMessage(languageBean.getMsg("candidat.save.msg9"));
             return;
         }
 
@@ -476,7 +383,6 @@ public class CandidatBean implements Serializable {
 
         ExternalContext ec = FacesContext.getCurrentInstance().getExternalContext();
         ec.redirect(((HttpServletRequest) ec.getRequest()).getRequestURI());
-
     }
 
     public void showAcceptedCandidatSelected(CandidatDto candidatDto) throws IOException {
@@ -484,7 +390,7 @@ public class CandidatBean implements Serializable {
         tabViewIndexSelected = 1;
 
         if (StringUtils.isEmpty(selectedTheso.getCurrentIdTheso())) {
-            showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.msg9"));
+            MessageUtils.showWarnMessage(languageBean.getMsg("candidat.save.msg9"));
             return;
         }
 
@@ -509,7 +415,7 @@ public class CandidatBean implements Serializable {
         tabViewIndexSelected = 0;
 
         if (StringUtils.isEmpty(selectedTheso.getCurrentIdTheso())) {
-            showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.msg9"));
+            MessageUtils.showWarnMessage(languageBean.getMsg("candidat.save.msg9"));
             return;
         }
 
@@ -520,8 +426,10 @@ public class CandidatBean implements Serializable {
         candidatService.getCandidatDetails(candidatSelected, selectedTheso.getCurrentIdTheso());
         initialCandidat = new CandidatDto(candidatSelected);
 
-        allTermes = candidatList.stream().filter(candidat -> !candidat.getNomPref().equals(candidatDto.getNomPref()))
-                .collect(Collectors.toList());
+        allTermes = candidatList.stream()
+                .filter(candidat -> StringUtils.isNotEmpty(candidat.getNomPref()))
+                .filter(candidat -> !candidat.getNomPref().equals(candidatDto.getNomPref()))
+                .toList();
 
         isShowCandidatActivate = true;
         isNewCandidatActivate = false;
@@ -588,78 +496,32 @@ public class CandidatBean implements Serializable {
     public void saveConcept() throws SQLException, IOException {
 
         if (StringUtils.isEmpty(candidatSelected.getNomPref())) {
-            showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.msg1"));
+            MessageUtils.showWarnMessage(languageBean.getMsg("candidat.save.msg1"));
             return;
         }
 
         if (isNewCandidatActivate) {
             if (StringUtils.isEmpty(definition)) {
-                showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.def"));
+                MessageUtils.showWarnMessage(languageBean.getMsg("candidat.save.def"));
                 return;
             }
         }
 
         if (roleOnThesoBean.getNodePreference() == null) {
-            showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.msg2"));
+            MessageUtils.showWarnMessage(languageBean.getMsg("candidat.save.msg2"));
             return;
         }
 
         if (initialCandidat == null) {
-
-            // en cas d'un nouveau candidat, verification dans les prefLabels
-            if (termHelper.isPrefLabelExist(candidatSelected.getNomPref().trim(),
-                    selectedTheso.getCurrentIdTheso(), getIdLang())) {
-                showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.msg3"));
+            if(!candidatService.saveNewCandidat(candidatSelected, selectedTheso.getCurrentIdTheso(), getIdLang(),
+                    currentUser.getNodeUser().getIdUser(), currentUser.getUsername(), selectedTheso.getCurrentLang(), definition)){
                 return;
             }
-            // verification dans les altLabels
-            if (termHelper.isAltLabelExist(candidatSelected.getNomPref().trim(),
-                    selectedTheso.getCurrentIdTheso(), getIdLang())) {
-                showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.msg4"));
-                return;
-            }
-
-            var concept = Concept.builder()
-                    .idConcept(candidatSelected.getIdConcepte())
-                    .idThesaurus(selectedTheso.getCurrentIdTheso())
-                    .topConcept(false)
-                    .lang(getIdLang())
-                    .idUser(currentUser.getNodeUser().getIdUser())
-                    .userName(currentUser.getUsername())
-                    .status("CA")
-                    .build();
-
-            conceptHelper.setNodePreference(roleOnThesoBean.getNodePreference());
-
-            var idNewConcept = candidatService.saveNewCondidat(concept);
-            if (idNewConcept == null) {
-                showMessage(FacesMessage.SEVERITY_ERROR, languageBean.getMsg("candidat.save.msg5"));
-                return;
-            }
-            candidatSelected.setIdConcepte(idNewConcept);
-
-            var terme = Term.builder()
-                    .lang(getIdLang())
-                    .idThesaurus(selectedTheso.getCurrentIdTheso())
-                    .contributor(currentUser.getNodeUser().getIdUser())
-                    .lexicalValue(candidatSelected.getNomPref().trim())
-                    .source("candidat")
-                    .status("D")
-                    .build();
-
-            candidatSelected.setIdTerm(candidatService.saveNewTerm(terme, candidatSelected.getIdConcepte(),
-                    candidatSelected.getUserId()));
-
-            noteHelper.addNote(candidatSelected.getIdConcepte(),
-                    selectedTheso.getCurrentLang(), selectedTheso.getCurrentIdTheso(),
-                    definition, "definition", "", currentUser.getNodeUser().getIdUser());
-
             setIsListCandidatsActivate(true);
-
         } else {
             if (!initialCandidat.getNomPref().equals(candidatSelected.getNomPref())) {
-                if (termHelper.isTermExistInThisLang(candidatSelected.getIdTerm(), getIdLang(), candidatSelected.getIdThesaurus())) {
-                    candidatService.updateIntitule(candidatSelected.getNomPref(), candidatSelected.getIdThesaurus(),
+                if (termService.isTermExistInLangAndThesaurus(candidatSelected.getIdTerm(), candidatSelected.getIdThesaurus(), getIdLang())) {
+                    termService.updateIntitule(candidatSelected.getNomPref(), candidatSelected.getIdThesaurus(),
                             getIdLang(), candidatSelected.getIdTerm());
                 } else {
                     Term term = new Term();
@@ -670,38 +532,33 @@ public class CandidatBean implements Serializable {
                     term.setSource("candidat");
                     term.setStatus("D");
                     term.setIdTerm(candidatSelected.getIdTerm());
-                    termeDao.addNewTerme(term);
+                    termService.addNewTerme(term);
                 }
-
             }
         }
-        /////////////////////////
-        ///// insert DcTermsData
-        var dcElement = DcElement.builder()
+
+        conceptDcTermRepository.save(ConceptDcTerm.builder()
                 .name(DCMIResource.CREATOR)
                 .value(currentUser.getNodeUser().getName())
-                .build();
-        dcElementHelper.addDcElementConcept(dcElement, candidatSelected.getIdConcepte(),
-                candidatSelected.getIdThesaurus());
-        ///////////////        
+                .idConcept(candidatSelected.getIdConcepte())
+                .idThesaurus(candidatSelected.getIdThesaurus())
+                .build());
 
-        candidatService.updateDetailsCondidat(candidatSelected, currentUser.getNodeUser().getIdUser());
+        candidatService.updateDetailsCondidat(candidatSelected);
 
-        //getAllCandidatsByThesoAndLangue();
-        candidatSelected.setNodeNotes(noteDao.getNotesCandidat(candidatSelected.getIdConcepte(),
-                candidatSelected.getIdThesaurus()));
+        candidatSelected.setNodeNotes(noteService.getNotesCandidat(candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus()));
         definition = "";
         isNewCandidatActivate = false;
         isListCandidatsActivate = false;
         isShowCandidatActivate = true;
 
-        showMessage(FacesMessage.SEVERITY_INFO, "Candidat enregistré avec succès");
+        MessageUtils.showInformationMessage("Candidat enregistré avec succès");
     }
 
     public List<NodeIdValue> searchCollection(String enteredValue) {
 
         if (StringUtils.isNotEmpty(enteredValue)) {
-            allCollections = groupHelper.searchGroup(selectedTheso.getCurrentIdTheso(),
+            allCollections = groupService.searchGroup(selectedTheso.getCurrentIdTheso(),
                     selectedTheso.getCurrentLang(), enteredValue);
             return createCollectionsFiltred(allCollections, candidatSelected.getCollections());
         } else {
@@ -713,7 +570,7 @@ public class CandidatBean implements Serializable {
         if (CollectionUtils.isNotEmpty(collections)) {
             return collections.stream()
                     .filter(element -> !isExist(collectionsSelected, element))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             return new ArrayList<>();
         }
@@ -726,15 +583,10 @@ public class CandidatBean implements Serializable {
                 .isPresent();
     }
 
-    //// ajouté par Miled
-    /**
-     * permet d'ajouter un vote pour ce candidat, c'est 1 seul vote par
-     * utilisateur
-     */
     public void addVote() {
         try {
             // cas où il y a un vote, on le supprime
-            if (candidatService.getVote(candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte(),
+            if (candidatService.isHaveVote(candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte(),
                     currentUser.getNodeUser().getIdUser(), null, VoteType.CANDIDAT)) {
                 candidatService.removeVote(candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte(),
                         currentUser.getNodeUser().getIdUser(), null, VoteType.CANDIDAT);
@@ -749,27 +601,19 @@ public class CandidatBean implements Serializable {
         } catch (SQLException sqle) {
             if (!sqle.getSQLState().equalsIgnoreCase("23505")) {
                 Logger.getLogger(CandidatBean.class.getName()).log(Level.SEVERE, null, sqle.toString());
-                showMessage(FacesMessage.SEVERITY_ERROR, "Le vote a échoué");
+                MessageUtils.showErrorMessage("Le vote a échoué");
                 return;
             }
         }
 
-        showMessage(FacesMessage.SEVERITY_INFO, "Vote enregistré");
-
-        PrimeFaces.current().ajax().update("messageIndex");
+        MessageUtils.showInformationMessage("Vote enregistré");
         PrimeFaces.current().ajax().update("tabViewCandidat");
     }
 
-    /**
-     * permet d'ajouter un vote pour un note de candidat, c'est 1 seul vote par
-     * utilisateur
-     *
-     * @param nodeNote
-     */
     public void addNoteVote(NodeNote nodeNote) {
         try {
             // cas où il y a un vote, on le supprime
-            if (candidatService.getVote(candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte(),
+            if (candidatService.isHaveVote(candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte(),
                     currentUser.getNodeUser().getIdUser(), nodeNote.getIdNote() + "", VoteType.NOTE)) {
 
                 candidatService.removeVote(candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte(),
@@ -784,14 +628,12 @@ public class CandidatBean implements Serializable {
         } catch (SQLException sqle) {
             if (!sqle.getSQLState().equalsIgnoreCase("23505")) {
                 Logger.getLogger(CandidatBean.class.getName()).log(Level.SEVERE, null, sqle.toString());
-                showMessage(FacesMessage.SEVERITY_ERROR, "Le vote a échoué");
+                MessageUtils.showErrorMessage("Le vote a échoué");
                 return;
             }
         }
 
-        showMessage(FacesMessage.SEVERITY_INFO, "Vote du note enregistré");
-
-        PrimeFaces.current().ajax().update("messageIndex");
+        MessageUtils.showInformationMessage("Vote du note enregistré");
         PrimeFaces.current().ajax().update("candidatForm:vote");
     }
 
@@ -806,7 +648,7 @@ public class CandidatBean implements Serializable {
     public List<NodeIdValue> searchTermeGenerique(String value) {
 
         if (StringUtils.isNotEmpty(value)) {
-            allTermesGenerique = searchHelper.searchAutoCompletionForRelationIdValue(value,
+            allTermesGenerique = searchService.searchAutoCompletionForRelationIdValue(value,
                     selectedTheso.getCurrentLang(), selectedTheso.getCurrentIdTheso());
             return createCollectionsFiltred(allTermesGenerique, candidatSelected.getTermesGenerique());
         } else {
@@ -817,7 +659,7 @@ public class CandidatBean implements Serializable {
     public List<NodeIdValue> searchTermeAssocie(String value) {
 
         if (StringUtils.isNotEmpty(value)) {
-            AllTermesAssocies = searchHelper.searchAutoCompletionForRelationIdValue(value,
+            AllTermesAssocies = searchService.searchAutoCompletionForRelationIdValue(value,
                     selectedTheso.getCurrentLang(), selectedTheso.getCurrentIdTheso());
             return createCollectionsFiltred(AllTermesAssocies, candidatSelected.getTermesAssocies());
         } else {
@@ -826,8 +668,9 @@ public class CandidatBean implements Serializable {
     }
 
     public void initialNewCandidat() throws IOException {
+
         if (StringUtils.isEmpty(selectedTheso.getCurrentIdTheso())) {
-            showMessage(FacesMessage.SEVERITY_WARN, languageBean.getMsg("candidat.save.msg9"));
+            MessageUtils.showWarnMessage(languageBean.getMsg("candidat.save.msg9"));
             return;
         }
         setIsNewCandidatActivate(true);
@@ -854,56 +697,47 @@ public class CandidatBean implements Serializable {
      * @return
      */
     public String getUserName(int idUser) {
-        return userHelper.getNameUser(idUser);
 
+        var user = userService.getUser(idUser);
+        return user!= null ? user.getName() : "";
     }
 
-    public void reactivateRejectedCandidat() {
+    public void reactivateRejectedCandidat() throws IOException {
         if (candidatSelected == null || candidatSelected.getIdConcepte() == null || candidatSelected.getIdConcepte().isEmpty()) {
             return;
         }
 
-        if (!candidateHelper.reactivateRejectedCandidat(
-                candidatSelected.getIdThesaurus(),
-                candidatSelected.getIdConcepte())) {
-            showMessage(FacesMessage.SEVERITY_ERROR, "l'action a échoué");
+        if (!candidatService.updateCandidatStatus(candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte(), 1)) {
+            MessageUtils.showErrorMessage("l'action a échoué");
         } else {
-            try {
-                showMessage(FacesMessage.SEVERITY_INFO, "l'action a réussi");
-                initCandidatModule();
-                getAllCandidatsByThesoAndLangue();
-                setIsListCandidatsActivate(true);
-            } catch (IOException ex) {
-                Logger.getLogger(CandidatBean.class.getName()).log(Level.SEVERE, null, ex);
-            }
+            MessageUtils.showInformationMessage("l'action a réussi");
+            initCandidatModule();
+            getAllCandidatsByThesoAndLangue();
+            getAcceptedCandidatByThesoAndLangue();
+            getRejectCandidatByThesoAndLangue();
+            setIsListCandidatsActivate(true);
         }
     }
 
-    public void addCollection(SelectEvent<NodeIdValue> event) {
-        Optional<NodeIdValue> elementAdded = allCollections.stream()
-                .filter(element -> event.getObject().getId().equalsIgnoreCase(element.getId()))
+    public void addCollection() {
+        var elementAdded = allCollections.stream()
+                .filter(element -> collectionSelected.getId().equalsIgnoreCase(element.getId()))
                 .findFirst();
         if (elementAdded.isPresent()) {
-            domaineDao.addNewDomaine(elementAdded.get().getId(),
-                    candidatSelected.getIdThesaurus(),
-                    candidatSelected.getIdConcepte());
-
+            groupService.addNewDomaine(elementAdded.get().getId(), candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte());
             candidatSelected.getCollections().add(elementAdded.get());
-            collectionTemps = Collections.emptyList();
             PrimeFaces.current().ajax().update("tabViewCandidat:containerIndexCandidat:candidatCollection");
-
-            showMessage(FacesMessage.SEVERITY_INFO, "Collection ajoutée avec succès !");
+            MessageUtils.showInformationMessage("Collection ajoutée avec succès !");
         }
     }
 
     public void removeCollection(NodeIdValue collection) {
-        if (CollectionUtils.isNotEmpty(candidatSelected.getCollections())) {
-            domaineDao.deleteDomaine(candidatSelected.getIdThesaurus(), candidatSelected.getIdConcepte(), collection.getId());
 
+        if (CollectionUtils.isNotEmpty(candidatSelected.getCollections())) {
+            groupService.deleteRelationConceptGroupConcept(collection.getId(), candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus());
             candidatSelected.getCollections().remove(collection);
             PrimeFaces.current().ajax().update("tabViewCandidat:containerIndexCandidat:candidatCollection");
-
-            showMessage(FacesMessage.SEVERITY_INFO, "Collection supprimée avec succès !");
+            MessageUtils.showInformationMessage("Collection supprimée avec succès !");
         }
     }
 
@@ -911,113 +745,106 @@ public class CandidatBean implements Serializable {
 
         if (StringUtils.isNotEmpty(employePour)) {
             if (candidatSelected.getEmployePourList().contains(employePour)) {
-                showMessage(FacesMessage.SEVERITY_ERROR, "Le mot '" + employePour + "' existe déjà !");
+                MessageUtils.showErrorMessage("Le mot '" + employePour + "' existe déjà !");
             } else {
                 try {
-                    termeDao.addNewEmployePour(employePour, candidatSelected.getIdThesaurus(),
-                            candidatSelected.getLang(), candidatSelected.getIdTerm());
-
-                    candidatSelected.getEmployePourList().add(employePour);
+                    termService.addSynonyme(employePour, candidatSelected.getIdThesaurus(), candidatSelected.getLang(), candidatSelected.getIdTerm());
+                } catch (Exception ex) {
+                    log.debug("Erreur pendant l'ajout du nouveau synonyme !");
+                } finally {
+                    List<String> modifiableList = new ArrayList<>(candidatSelected.getEmployePourList());
+                    modifiableList.add(employePour);
+                    candidatSelected.setEmployePourList(modifiableList);
                     employePour = "";
                     PrimeFaces.current().ajax().update("tabViewCandidat");
-
-                    showMessage(FacesMessage.SEVERITY_INFO, "Synonyme ajouté avec succès !");
-                } catch (Exception ex) {
-                    showMessage(FacesMessage.SEVERITY_ERROR, "Erreur pendant l'ajout du nouveau synonyme !");
+                    MessageUtils.showInformationMessage("Synonyme ajouté avec succès !");
                 }
             }
         }
     }
 
     public void removeSynonyme(String synonyme) {
+
         if (CollectionUtils.isNotEmpty(candidatSelected.getEmployePourList())) {
-            termeDao.deleteEMByIdTermAndLang(candidatSelected.getIdTerm(),
-                    candidatSelected.getIdThesaurus(), candidatSelected.getLang());
-
-            candidatSelected.getEmployePourList().remove(synonyme);
-            PrimeFaces.current().ajax().update("tabViewCandidat:containerIndexCandidat:candidatSynonym");
-
-            showMessage(FacesMessage.SEVERITY_INFO, "Synonyme supprimé avec succès !");
+            try {
+                nonPreferredTermService.deleteEMByIdTermAndLangAndLexical(candidatSelected.getIdTerm(),
+                        candidatSelected.getIdThesaurus(), candidatSelected.getLang(), synonyme);
+                candidatSelected.setEmployePourList(candidatSelected.getEmployePourList().stream()
+                        .filter(element -> !element.equals(synonyme))
+                        .toList());
+                PrimeFaces.current().ajax().update("tabViewCandidat:containerIndexCandidat:candidatSynonym");
+                MessageUtils.showInformationMessage("Synonyme supprimé avec succès !");
+            } catch (Exception ex) {
+                MessageUtils.showErrorMessage("Erreur pendant la suppression du synonyme " + synonyme);
+            }
         }
     }
 
-    public void addTraduction(SelectEvent<NodeIdValue> event) throws SQLException {
-        var elementAdded = event.getObject();
+    public void addTraduction() throws SQLException {
 
         if (candidatSelected.getTermesGenerique().stream()
-                .filter(element -> element.getId().equalsIgnoreCase(elementAdded.getId()))
-                .findFirst().isPresent()) {
-            showMessage(FacesMessage.SEVERITY_WARN, "Le terme existe déjà !");
+                .filter(element -> element.getId().equalsIgnoreCase(traductionSelected.getId()))
+                .findFirst()
+                .isPresent()) {
+            MessageUtils.showWarnMessage("Le terme existe déjà !");
         } else {
+            relationService.addHierarchicalRelation(candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso(),
+                    "BT",traductionSelected.getId());
 
-            relationDao.addRelationBT(candidatSelected.getIdConcepte(), elementAdded.getId(), selectedTheso.getCurrentIdTheso());
+            relationService.addHierarchicalRelation(traductionSelected.getId(), selectedTheso.getCurrentIdTheso(),
+                    "NT", candidatSelected.getIdConcepte());
 
-            candidatSelected.setTermesGenerique(relationDao.getCandidatRelationsBT(
-                    candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus(),
-                    candidatSelected.getLang()));
-
-            showMessage(FacesMessage.SEVERITY_INFO, "Term générique ajoutée avec succès !");
-
+            candidatSelected.setTermesGenerique(relationService.getCandidatRelationsBT(candidatSelected.getIdConcepte(),
+                    candidatSelected.getIdThesaurus(), candidatSelected.getLang()));
+            MessageUtils.showInformationMessage("Term générique ajoutée avec succès !");
             PrimeFaces.current().ajax().update("tabViewCandidat:containerIndexCandidat:candidatBT");
         }
-        termesGeneriqueTmp = Collections.emptyList();
+        traductionSelected = null;
     }
 
     public void removeGenericTerm(NodeIdValue genericTerm) throws SQLException {
+
         if (CollectionUtils.isNotEmpty(candidatSelected.getTermesGenerique())) {
-
-            relationsHelper.deleteRelationBT(candidatSelected.getIdConcepte(),
-                    selectedTheso.getCurrentIdTheso(), genericTerm.getId(), currentUser.getNodeUser().getIdUser());
-
-            candidatSelected.setTermesGenerique(relationDao.getCandidatRelationsBT(
-                    candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus(),
-                    candidatSelected.getLang()));
-
+            relationService.deleteRelationBT(candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso(),
+                    genericTerm.getId(), currentUser.getNodeUser().getIdUser());
+            candidatSelected.setTermesGenerique(relationService.getCandidatRelationsBT(candidatSelected.getIdConcepte(),
+                    candidatSelected.getIdThesaurus(), candidatSelected.getLang()));
             PrimeFaces.current().ajax().update("tabViewCandidat:containerIndexCandidat:candidatBT");
-
-            showMessage(FacesMessage.SEVERITY_INFO, "Term générique supprimée avec succès !");
+            MessageUtils.showInformationMessage("Term générique supprimée avec succès !");
         }
     }
 
-    public void addTraductionAssocieSelect(SelectEvent<NodeIdValue> event) throws SQLException {
+    public void addTraductionAssocieSelect() throws SQLException {
 
         if (candidatSelected.getTermesAssocies().stream()
-                .filter(element -> element.getId().equalsIgnoreCase(event.getObject().getId()))
+                .filter(element -> element.getId().equalsIgnoreCase(termesAssociesSelected.getId()))
                 .findFirst().isPresent()) {
-            showMessage(FacesMessage.SEVERITY_WARN, "Le terme existe déjà !");
+            MessageUtils.showWarnMessage("Le terme existe déjà !");
         } else {
-            relationDao.addRelationRT(candidatSelected.getIdConcepte(), event.getObject().getId(), selectedTheso.getCurrentIdTheso());
-
-            candidatSelected.setTermesAssocies(relationDao.getCandidatRelationsRT(
-                    candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus(),
-                    candidatSelected.getLang()));
-
-            showMessage(FacesMessage.SEVERITY_INFO, "Term associé ajouté avec succès !");
+            relationService.addHierarchicalRelation(candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso(), "RT", termesAssociesSelected.getId());
+            candidatSelected.setTermesAssocies(relationService.getCandidatRelationsRT(
+                    candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus(), candidatSelected.getLang()));
+            MessageUtils.showInformationMessage("Term associé ajouté avec succès !");
             PrimeFaces.current().ajax().update("tabViewCandidat:containerIndexCandidat:candidatRT");
         }
-        termesAssociesTmp = Collections.emptyList();
+        termesAssociesSelected = null;
     }
 
     public void removeAssociesTerm(NodeIdValue associeTerm) throws SQLException {
 
-        relationsHelper.deleteRelationRT(candidatSelected.getIdConcepte(),
-                selectedTheso.getCurrentIdTheso(), associeTerm.getId(), currentUser.getNodeUser().getIdUser());
+        relationService.deleteRelationRT(candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso(),
+                associeTerm.getId(), currentUser.getNodeUser().getIdUser());
+        candidatSelected.setTermesAssocies(relationService.getCandidatRelationsRT(candidatSelected.getIdConcepte(),
+                candidatSelected.getIdThesaurus(), candidatSelected.getLang()));
 
-        candidatSelected.setTermesAssocies(relationDao.getCandidatRelationsRT(
-                candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus(),
-                candidatSelected.getLang()));
-
-        showMessage(FacesMessage.SEVERITY_INFO, "Term associé supprimé avec succès !");
+        MessageUtils.showInformationMessage("Term associé supprimé avec succès !");
         PrimeFaces.current().ajax().update("tabViewCandidat:containerIndexCandidat:candidatRT");
     }
 
     public void onRelationBTAdded(SelectEvent<NodeIdValue> event) {
-        Optional<NodeIdValue> elementAdded = allCollections.stream()
-                .filter(element -> event.getObject().getId().equalsIgnoreCase(element.getId()))
-                .findFirst();
+        var elementAdded = allCollections.stream().filter(element -> event.getObject().getId().equalsIgnoreCase(element.getId())).findFirst();
         if (elementAdded.isPresent()) {
             candidatSelected.getCollections().add(elementAdded.get());
-            collectionTemps = new ArrayList<>();
             PrimeFaces.current().ajax().update("tabViewCandidat");
         }
     }
@@ -1027,19 +854,14 @@ public class CandidatBean implements Serializable {
      * uniquement les candidats qui étatient en attente
      */
     public void getOldCandidates() {
-        String messageInfo = candidatService.getOldCandidates(selectedTheso.getCurrentIdTheso(),
-                currentUser.getNodeUser().getIdUser(), roleOnThesoBean.getNodePreference());
-        showMessage(FacesMessage.SEVERITY_INFO, messageInfo);
-        getAllCandidatsByThesoAndLangue();
-    }
 
-    public void showMessage(FacesMessage.Severity messageType, String messageValue) {
-        FacesContext.getCurrentInstance().addMessage(null, new FacesMessage(messageType, "", messageValue));
-        PrimeFaces.current().ajax().update("messageIndex");
+        var messageInfo = candidatService.getOldCandidates(selectedTheso.getCurrentIdTheso(), currentUser.getNodeUser().getIdUser());
+        MessageUtils.showInformationMessage(messageInfo);
+        loadCandidatsList();
     }
 
     public void setListCandidatsActivate(boolean isListCandidatsActivate) {
-        getAllCandidatsByThesoAndLangue();
+        loadCandidatsList();
         this.isListCandidatsActivate = isListCandidatsActivate;
         isImportViewActivate = false;
         isExportViewActivate = false;
@@ -1066,6 +888,7 @@ public class CandidatBean implements Serializable {
     }
 
     public List<String> getSelectedCandidatesAsId() {
+
         List<String> listIdOfConcept = new ArrayList<>();
         for (CandidatDto selectedCandidate : selectedCandidates) {
             listIdOfConcept.add(selectedCandidate.getIdConcepte());
@@ -1074,70 +897,41 @@ public class CandidatBean implements Serializable {
     }
 
     public void deleteAlignement() {
-        alignmentHelper.deleteAlignment(
-                alignementSelected.getId_alignement(),
-                selectedTheso.getCurrentIdTheso());
 
-        candidatSelected.setAlignments(alignmentHelper.getAllAlignmentOfConcept(
-                candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso()));
+        alignmentService.deleteAlignment(alignementSelected.getId_alignement(), selectedTheso.getCurrentIdTheso());
+        candidatSelected.setAlignments(alignmentService.getAllAlignmentOfConcept(candidatSelected.getIdConcepte(),
+                selectedTheso.getCurrentIdTheso()));
 
-        showMessage(FacesMessage.SEVERITY_INFO, "Alignement supprimé avec succès !");
-
+        MessageUtils.showInformationMessage("Alignement supprimé avec succès !");
         PrimeFaces.current().ajax().update("tabViewCandidat");
     }
 
     public void updateAlignement() {
-        alignmentHelper.updateAlignment(
-                alignementSelected.getId_alignement(),
-                alignementSelected.getConcept_target(),
-                alignementSelected.getThesaurus_target(),
-                alignementSelected.getUri_target(),
-                alignementSelected.getAlignement_id_type(),
-                candidatSelected.getIdConcepte(),
-                selectedTheso.getCurrentIdTheso());
 
-        candidatSelected.setAlignments(alignmentHelper.getAllAlignmentOfConcept(
-                candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso()));
+        var alignementElement = AlignementElement.builder()
+                .idAlignment(alignementSelected.getId_alignement())
+                .alignement_id_type(alignementSelected.getAlignement_id_type())
+                .conceptTarget(alignementSelected.getConcept_target())
+                .thesaurus_target(alignementSelected.getThesaurus_target())
+                .targetUri(alignementSelected.getUri_target())
+                .build();
+        alignmentService.updateAlignement(alignementElement, candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso());
 
-        showMessage(FacesMessage.SEVERITY_INFO, "Alignement mise à jour avec succès !");
-
+        candidatSelected.setAlignments(alignmentService.getAllAlignmentOfConcept(candidatSelected.getIdConcepte(),
+                selectedTheso.getCurrentIdTheso()));
+        MessageUtils.showInformationMessage("Alignement mise à jour avec succès !");
         PrimeFaces.current().ajax().update("tabViewCandidat");
     }
 
     public String getCreatedByBtnTitle() {
+
         var createdBy = (candidatSelected != null && StringUtils.isNotEmpty(candidatSelected.getCreatedBy()))
                 ? " " + languageBean.getMsg("rightbody.concept.createdBy") + " " + candidatSelected.getCreatedBy() : "";
         return languageBean.getMsg("candidat.file") + createdBy;
     }
 
-    public void addNewImage(int idUser) {
-
-        if (StringUtils.isEmpty(imageBean.getUri())) {
-            showMessage(FacesMessage.SEVERITY_ERROR, "Aucune URI insérée !");
-            return;
-        }
-
-        if (!imagesHelper.addExternalImage(
-                candidatSelected.getIdConcepte(),
-                selectedTheso.getCurrentIdTheso(),
-                imageBean.getName(),
-                imageBean.getCopyright(),
-                imageBean.getUri(),
-                imageBean.getCreator(),
-                idUser)) {
-            showMessage(FacesMessage.SEVERITY_ERROR, "Erreur pendant l'ajout de l'image !");
-            return;
-        }
-
-        candidatSelected.setImages(imagesHelper.getExternalImages(
-                candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus()));
-
-        showMessage(FacesMessage.SEVERITY_INFO, "Image ajoutée avec succès");
-        initImageDialog();
-        PrimeFaces.current().ajax().update("tabViewCandidat");
-    }
-
     public void openAddAlignementWindow() {
+
         alignmentBean.setConceptValueForAlignment(candidatSelected.getNomPref());
         alignmentBean.setExistingAlignment(candidatSelected.getIdConcepte(), selectedTheso.getCurrentIdTheso());
         alignmentBean.prepareValuesForIdRef();
@@ -1145,19 +939,20 @@ public class CandidatBean implements Serializable {
         alignmentBean.initAlignmentSources(selectedTheso.getCurrentIdTheso(), selectedTheso.getCurrentLang());
         alignmentBean.setIdConceptSelectedForAlignment(candidatSelected.getIdConcepte());
 
-        PrimeFaces.current().executeScript("PF('searchAlignement').show();");
+        if (CollectionUtils.isEmpty(alignmentBean.getAlignementSources())) {
+            MessageUtils.showWarnMessage("Vous devez choisir le type d'alignement d'abord !");
+        } else {
+            PrimeFaces.current().executeScript("PF('searchAlignement').show();");
+        }
     }
 
     public void searchAlignementAuto() {
-        alignmentBean.addAlignment(selectedTheso.getSelectedIdTheso(),
-                alignmentBean.getIdConceptSelectedForAlignment(),
-                currentUser.getNodeUser().getIdUser(),
-                false);
 
-        showMessage(FacesMessage.SEVERITY_INFO, "Alignement ajouté avec sucée !");
+        alignmentBean.addAlignment(selectedTheso.getSelectedIdTheso(), alignmentBean.getIdConceptSelectedForAlignment(),
+                currentUser.getNodeUser().getIdUser(), false);
 
+        MessageUtils.showInformationMessage("Alignement ajouté avec sucée !");
         candidatService.getCandidatDetails(candidatSelected, selectedTheso.getCurrentIdTheso());
-
         PrimeFaces.current().ajax().update("tabViewCandidat");
     }
 
@@ -1180,40 +975,20 @@ public class CandidatBean implements Serializable {
         }
     }
 
-    public void initImageDialog() {
-        imageBean.setUri(null);
-        imageBean.setCopyright(null);
-        imageBean.setName(null);
-        imageBean.setCreator(null);
-    }
-
-    public void deleteImage(String imageUri) {
-
-        imagesHelper.deleteExternalImage(candidatSelected.getIdConcepte(),
-                selectedTheso.getSelectedIdTheso(), imageUri);
-
-        candidatSelected.setImages(imagesHelper.getExternalImages(
-                candidatSelected.getIdConcepte(), candidatSelected.getIdThesaurus()));
-
-        showMessage(FacesMessage.SEVERITY_INFO, "Image supprimée avec succès");
-    }
-
-    public boolean isIsModifiedLabel() {
-        return isModifiedLabel;
-    }
-
-    public void setIsModifiedLabel(boolean isModifiedLabel) {
-        this.isModifiedLabel = isModifiedLabel;
-    }
-
     public void changeStateOfLabel() {
-        this.isModifiedLabel = true;
+        this.modifiedLabel = true;
     }
 
     public void updateCandidateLabel() {
         candidatService.updateIntitule(candidatSelected.getNomPref(), candidatSelected.getIdThesaurus(),
                 candidatSelected.getLang(), candidatSelected.getIdTerm());
-        isModifiedLabel = false;
+        modifiedLabel = false;
+    }
 
+    public String formatDate(Date date) {
+        if (date == null) {
+            return "";
+        }
+        return new SimpleDateFormat("dd/MM/yyyy HH:mm").format(date);
     }
 }
